meta tags updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-web-v1",
   "homepage": "https://requiemcreatif.com",
-  "description": "Alain Mani website",
+  "description": "requiem creatif website by Alain Mani",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
